--- a/style.css
+++ b/style.css
@@ -104,10 +104,12 @@ body {
   transition: 0.3s ease;
 }
 
-/* ANIMATION */
+/* ================== 
+    ANIMATION 
+================== */
 
 .hamburger.active span:nth-child(1) {
-  transform: rotate(45deg) translateY(8px);
+  transform: rotate(60deg) translateY(8px);
 }
 
 .hamburger.active span:nth-child(2) {
@@ -387,6 +389,7 @@ section h2 {
     padding: 20px;
     border-radius: 10px;
     width: 200px;
+    z-index: 1500;
   }
 
   .nav-links.active {
