--- a/style.css
+++ b/style.css
@@ -172,9 +172,7 @@ z-index: -2;
   animation: grow 1.5s forwards;
 }
 
-@keyframes grow {
-  to { width: 120px; }
-}
+
 
     @keyframes gradientAnimation {
       0%{background-position:0% 50%};
@@ -463,7 +461,7 @@ section h2 {
   }
 
   .hero h1 {
-    font-size: 2rem;
+    font-size: clamp(2rem, 5vw, 3rem);
   }
 
   .about-container {
